[package]
name = "cosmo"
version = "0.1.0"
authors = ["Duarte Nunes <duarte.m.nunes@gmail.com>"]
license = "Apache-2.0"
description = "Concurrency utils"

repository = "https://github.com/duarten/cosmo"
homepage = "https://github.com/duarten/cosmo"
documentation = "https://duarten.github.io/cosmo"
keywords = ["data-structures", "concurrency", "threading", "performance"]
readme = "README.md"

[lib]
name = "cosmo"
crate-type = ["dynlib"]

[dependencies.time]
time = "*"

