[package]
name = "cosmo"
version = "0.1.0"
authors = ["Duarte Nunes <duarte@fastmail.com>"]
license = "Apache-2.0"
description = "Concurrency utils"
edition = "2021"

repository = "https://github.com/duarten/cosmo"
homepage = "https://github.com/duarten/cosmo"
documentation = "https://duarten.github.io/cosmo"
keywords = ["data-structures", "channel", "concurrency", "threading", "performance"]
readme = "../README.md"

[dependencies]
futures-util = "0.3.24"

[dev-dependencies]
criterion = "0.3.5"
futures-task = "0.3.24"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "bounded_spsc_queue"
harness = false

[[bench]]
name = "bounded_spsc_channel"
harness = false
